/*
 * Copyright (C) 2017 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
option optimize_for = LITE_RUNTIME;

package perfetto.protorpc;

message RPCFrame {
  // Client -> Host messages.
  message BindService { string service_name = 1; }

  message InvokeMethod {
    int32 service_id = 1;
    int32 method_id = 2;
    bytes args_proto = 3;  // proto-encoded request argument.
  }

  // Host -> Client messages.
  message BindServiceReply {
    message Method {
      int32 id = 1;
      string name = 2;
    }
    bool success = 1;
    int32 service_id = 2;
    repeated Method methods = 3;
  }

  message InvokeMethodReply {
    bool success = 1;
    bool eof = 2;           // only for streaming RPCs.
    bytes reply_proto = 3;  // proto-encoded response value.
  }

  uint64 request_id = 1;
  oneof msg {
    BindService msg_bind_service = 2;
    BindServiceReply msg_bind_service_reply = 3;
    InvokeMethod msg_invoke_method = 4;
    InvokeMethodReply msg_invoke_method_reply = 5;
  }
};
